Fix checkbox icon position so it does not overlap label

--- a/src/styles/serviceRequest.scss
+++ b/src/styles/serviceRequest.scss
@@ -1,11 +1,24 @@
 .file-field {
   margin-bottom: 16px;
+  display: block;
+  cursor: pointer;
+
+  input {
+    z-index: -1;
+  }
 }
 
 .file-path-wrapper {
+  pointer-events: none;
+
   textarea {
     margin-top: 0 !important;
   }
+}
+
+.checkbox-col {
+  display: flex;
+  flex-direction: column;
 }
 
 #planning-guide-checkbox {
